--- a/Assignment 1/edmund-scraper.ipynb
+++ b/Assignment 1/edmund-scraper.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "# Scapre Comments from Edmund"
+   ],
    "metadata": {}
   },
   {
@@ -66,9 +68,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "size = 5000"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "source": [
-    "for i in tqdm(range(1,11)):\n",
+    "for i in tqdm(range(1,(size//50)+1)):\n",
     "    comment_url = \"https://forums.edmunds.com/discussion/2864/general/x/entry-level-luxury-performance-sedans/p{}\".format(i)\n",
     "    driver.get(comment_url)\n",
     "    ids = driver.find_elements_by_xpath(\"//*[contains(@id,'Comment_')]\")\n",
@@ -258,8 +269,7 @@
    "source": [
     "import time\n",
     "time.time()\n",
-    "comments.to_csv(\"./edmunds_comments_small_2.csv\")\n",
-    "# comments.to_csv(\"./edmunds_comments_lrg_{}.csv\".format(time.time()))"
+    "comments.to_csv(\"./output/{a}_edmunds_comments_{b}.csv\".format(a = time.time(),b = size))"
    ],
    "outputs": [],
    "metadata": {}
