--- a/Assignment 1/brands_&_lift.ipynb
+++ b/Assignment 1/brands_&_lift.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
@@ -19,9 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "source": [
-    "corpus = pd.read_csv(\"./outputs/Results.csv\", index_col=0)\n",
+    "corpus = pd.read_csv(\"./output/Results.csv\", index_col=0)\n",
     "corpus.dropna(inplace= True)\n",
     "corpus[\"comments\"] = corpus[\"comments\"].str.lower()\n",
     "print(corpus.shape)\n",
@@ -102,14 +102,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 61
+     "execution_count": 2
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "source": [
     "top10 = ['audi','mercedes','mazda','bmw','nissan','volvo','ford','hyundai','volkswagen','toyota']\n",
     "freq_count = {}\n",
@@ -121,33 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "source": [
     "freq_count = {}\n",
-    "for brands in top10:\n",
-    "    freq_count[brands] = 0"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "source": [
-    "def Brand_isPresent(message: str):\n",
-    "    for brand in top10:\n",
-    "        if brand in message:\n",
-    "            freq_count[brand] += 1\n",
-    "    return"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "source": [
-    "corpus.comments.apply(lambda x: (Brand_isPresent(x)))\n",
+    "for brand in top10:\n",
+    "    freq_count[brand] = sum(corpus.comments.str.contains(brand))\n",
     "freq_count"
    ],
    "outputs": [
@@ -168,14 +146,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 65
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "source": [
     "def SimultaneousCount(brand1: str, brand2: str):\n",
     "    return corpus[\"comments\"].apply(lambda x: (all(t in x for t in [brand1, brand2])))\n",
@@ -191,229 +169,26 @@
       ]
      },
      "metadata": {},
-     "execution_count": 87
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "source": [
     "Lift = pd.DataFrame(index=top10, columns=top10)\n",
-    "Lift"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>audi</th>\n",
-       "      <th>mercedes</th>\n",
-       "      <th>mazda</th>\n",
-       "      <th>bmw</th>\n",
-       "      <th>nissan</th>\n",
-       "      <th>volvo</th>\n",
-       "      <th>ford</th>\n",
-       "      <th>hyundai</th>\n",
-       "      <th>volkswagen</th>\n",
-       "      <th>toyota</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>audi</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mercedes</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mazda</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>bmw</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>nissan</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>volvo</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ford</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>hyundai</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>volkswagen</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>toyota</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           audi mercedes mazda  bmw nissan volvo ford hyundai volkswagen  \\\n",
-       "audi        NaN      NaN   NaN  NaN    NaN   NaN  NaN     NaN        NaN   \n",
-       "mercedes    NaN      NaN   NaN  NaN    NaN   NaN  NaN     NaN        NaN   \n",
-       "mazda       NaN      NaN   NaN  NaN    NaN   NaN  NaN     NaN        NaN   \n",
-       "bmw         NaN      NaN   NaN  NaN    NaN   NaN  NaN     NaN        NaN   \n",
-       "nissan      NaN      NaN   NaN  NaN    NaN   NaN  NaN     NaN        NaN   \n",
-       "volvo       NaN      NaN   NaN  NaN    NaN   NaN  NaN     NaN        NaN   \n",
-       "ford        NaN      NaN   NaN  NaN    NaN   NaN  NaN     NaN        NaN   \n",
-       "hyundai     NaN      NaN   NaN  NaN    NaN   NaN  NaN     NaN        NaN   \n",
-       "volkswagen  NaN      NaN   NaN  NaN    NaN   NaN  NaN     NaN        NaN   \n",
-       "toyota      NaN      NaN   NaN  NaN    NaN   NaN  NaN     NaN        NaN   \n",
-       "\n",
-       "           toyota  \n",
-       "audi          NaN  \n",
-       "mercedes      NaN  \n",
-       "mazda         NaN  \n",
-       "bmw           NaN  \n",
-       "nissan        NaN  \n",
-       "volvo         NaN  \n",
-       "ford          NaN  \n",
-       "hyundai       NaN  \n",
-       "volkswagen    NaN  \n",
-       "toyota        NaN  "
-      ]
-     },
-     "metadata": {},
-     "execution_count": 80
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "source": [
+    "\n",
     "for brand1 in top10:\n",
     "    for brand2 in top10:\n",
     "        N_ab = sum(SimultaneousCount(brand1, brand2))\n",
     "\n",
     "        Lift[brand1][brand2] = (N*N_ab)/(freq_count[brand1]*freq_count[brand2])\n",
+    "        if(brand1 == brand2):\n",
+    "            Lift[brand1][brand2] = 1\n",
+    "\n",
+    "Lift.to_csv(\"./output/lift.csv\")\n",
     "Lift"
    ],
    "outputs": [
@@ -454,7 +229,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>audi</th>\n",
-       "      <td>14.795252</td>\n",
+       "      <td>1</td>\n",
        "      <td>4.201121</td>\n",
        "      <td>2.526019</td>\n",
        "      <td>2.347497</td>\n",
@@ -468,7 +243,7 @@
        "    <tr>\n",
        "      <th>mercedes</th>\n",
        "      <td>4.201121</td>\n",
-       "      <td>30.777778</td>\n",
+       "      <td>1</td>\n",
        "      <td>1.501355</td>\n",
        "      <td>2.153693</td>\n",
        "      <td>2.252033</td>\n",
@@ -482,7 +257,7 @@
        "      <th>mazda</th>\n",
        "      <td>2.526019</td>\n",
        "      <td>1.501355</td>\n",
-       "      <td>60.804878</td>\n",
+       "      <td>1</td>\n",
        "      <td>1.731628</td>\n",
        "      <td>4.449137</td>\n",
        "      <td>6.224121</td>\n",
@@ -496,7 +271,7 @@
        "      <td>2.347497</td>\n",
        "      <td>2.153693</td>\n",
        "      <td>1.731628</td>\n",
-       "      <td>4.056957</td>\n",
+       "      <td>1</td>\n",
        "      <td>1.464462</td>\n",
        "      <td>1.75695</td>\n",
        "      <td>1.569656</td>\n",
@@ -510,7 +285,7 @@
        "      <td>2.252033</td>\n",
        "      <td>4.449137</td>\n",
        "      <td>1.464462</td>\n",
-       "      <td>24.321951</td>\n",
+       "      <td>1</td>\n",
        "      <td>4.787786</td>\n",
        "      <td>2.46115</td>\n",
        "      <td>2.842825</td>\n",
@@ -524,7 +299,7 @@
        "      <td>6.224121</td>\n",
        "      <td>1.75695</td>\n",
        "      <td>4.787786</td>\n",
-       "      <td>39.259843</td>\n",
+       "      <td>1</td>\n",
        "      <td>4.206412</td>\n",
        "      <td>1.529604</td>\n",
        "      <td>13.086614</td>\n",
@@ -538,7 +313,7 @@
        "      <td>1.569656</td>\n",
        "      <td>2.46115</td>\n",
        "      <td>4.206412</td>\n",
-       "      <td>29.678571</td>\n",
+       "      <td>1</td>\n",
        "      <td>5.010668</td>\n",
        "      <td>6.595238</td>\n",
        "      <td>3.273372</td>\n",
@@ -552,7 +327,7 @@
        "      <td>2.842825</td>\n",
        "      <td>1.529604</td>\n",
        "      <td>5.010668</td>\n",
-       "      <td>64.753247</td>\n",
+       "      <td>1</td>\n",
        "      <td>7.194805</td>\n",
        "      <td>8.094156</td>\n",
        "    </tr>\n",
@@ -566,7 +341,7 @@
        "      <td>13.086614</td>\n",
        "      <td>6.595238</td>\n",
        "      <td>7.194805</td>\n",
-       "      <td>277.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>8.147059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -580,47 +355,47 @@
        "      <td>3.273372</td>\n",
        "      <td>8.094156</td>\n",
        "      <td>8.147059</td>\n",
-       "      <td>36.661765</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 audi   mercedes      mazda       bmw     nissan      volvo  \\\n",
-       "audi        14.795252   4.201121   2.526019  2.347497   1.515611    5.35891   \n",
-       "mercedes     4.201121  30.777778   1.501355  2.153693   2.252033   7.270341   \n",
-       "mazda        2.526019   1.501355  60.804878  1.731628   4.449137   6.224121   \n",
-       "bmw          2.347497   2.153693   1.731628  4.056957   1.464462    1.75695   \n",
-       "nissan       1.515611   2.252033   4.449137  1.464462  24.321951   4.787786   \n",
-       "volvo         5.35891   7.270341   6.224121   1.75695   4.787786  39.259843   \n",
-       "ford         2.377808   2.931217   4.343206  1.569656    2.46115   4.206412   \n",
-       "hyundai      0.960731    2.79798   3.948369  1.317194   2.842825   1.529604   \n",
-       "volkswagen   9.041543  11.969136  20.268293  2.930024   5.404878  13.086614   \n",
-       "toyota       1.631829   2.263072    6.70642  1.312545    8.40538    4.33013   \n",
+       "                audi   mercedes      mazda       bmw    nissan      volvo  \\\n",
+       "audi               1   4.201121   2.526019  2.347497  1.515611    5.35891   \n",
+       "mercedes    4.201121          1   1.501355  2.153693  2.252033   7.270341   \n",
+       "mazda       2.526019   1.501355          1  1.731628  4.449137   6.224121   \n",
+       "bmw         2.347497   2.153693   1.731628         1  1.464462    1.75695   \n",
+       "nissan      1.515611   2.252033   4.449137  1.464462         1   4.787786   \n",
+       "volvo        5.35891   7.270341   6.224121   1.75695  4.787786          1   \n",
+       "ford        2.377808   2.931217   4.343206  1.569656   2.46115   4.206412   \n",
+       "hyundai     0.960731    2.79798   3.948369  1.317194  2.842825   1.529604   \n",
+       "volkswagen  9.041543  11.969136  20.268293  2.930024  5.404878  13.086614   \n",
+       "toyota      1.631829   2.263072    6.70642  1.312545   8.40538    4.33013   \n",
        "\n",
-       "                 ford    hyundai volkswagen     toyota  \n",
-       "audi         2.377808   0.960731   9.041543   1.631829  \n",
-       "mercedes     2.931217    2.79798  11.969136   2.263072  \n",
-       "mazda        4.343206   3.948369  20.268293    6.70642  \n",
-       "bmw          1.569656   1.317194   2.930024   1.312545  \n",
-       "nissan        2.46115   2.842825   5.404878    8.40538  \n",
-       "volvo        4.206412   1.529604  13.086614    4.33013  \n",
-       "ford        29.678571   5.010668   6.595238   3.273372  \n",
-       "hyundai      5.010668  64.753247   7.194805   8.094156  \n",
-       "volkswagen   6.595238   7.194805      277.0   8.147059  \n",
-       "toyota       3.273372   8.094156   8.147059  36.661765  "
+       "                ford   hyundai volkswagen    toyota  \n",
+       "audi        2.377808  0.960731   9.041543  1.631829  \n",
+       "mercedes    2.931217   2.79798  11.969136  2.263072  \n",
+       "mazda       4.343206  3.948369  20.268293   6.70642  \n",
+       "bmw         1.569656  1.317194   2.930024  1.312545  \n",
+       "nissan       2.46115  2.842825   5.404878   8.40538  \n",
+       "volvo       4.206412  1.529604  13.086614   4.33013  \n",
+       "ford               1  5.010668   6.595238  3.273372  \n",
+       "hyundai     5.010668         1   7.194805  8.094156  \n",
+       "volkswagen  6.595238  7.194805          1  8.147059  \n",
+       "toyota      3.273372  8.094156   8.147059         1  "
       ]
      },
      "metadata": {},
-     "execution_count": 82
+     "execution_count": 6
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "source": [
     "a = np.array(Lift)\n",
     "np.alltrue(a == a.T)\n",
@@ -635,18 +410,9 @@
       ]
      },
      "metadata": {},
-     "execution_count": 93
+     "execution_count": 7
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "source": [
-    "Lift.to_csv(\"./output/lift.csv\")"
-   ],
-   "outputs": [],
    "metadata": {}
   },
   {
@@ -673,10 +439,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.6 64-bit ('mis-382n': conda)"
+   "display_name": "Python 3.9.6 64-bit ('mis-284n': conda)"
   },
   "interpreter": {
-   "hash": "4361aab12e46f73717a057315632a39c5720c41841579418b91b07fe756a6691"
+   "hash": "4ff5cf590a1211141850067b7be7ddbced36f8319e8ee97286c1fbd0c81975fa"
   }
  },
  "nbformat": 4,
