--- a/Assignment 1/brands_&_lift.ipynb
+++ b/Assignment 1/brands_&_lift.ipynb
@@ -19,9 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "source": [
-    "corpus = pd.read_csv(\"./output/Results.csv\", index_col=0)\n",
+    "corpus = pd.read_csv(\"./output/comments_5000.csv\", index_col=0)\n",
     "corpus.dropna(inplace= True)\n",
     "corpus[\"comments\"] = corpus[\"comments\"].str.lower()\n",
     "print(corpus.shape)\n",
@@ -33,7 +33,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(4986, 2)\n"
+      "(4979, 3)\n"
      ]
     },
     {
@@ -59,59 +59,81 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Date</th>\n",
+       "      <th>user_id</th>\n",
        "      <th>comments</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>March 24, 2002 10:54PM</td>\n",
-       "      <td>i personally think that with a few tweaks the ...</td>\n",
+       "      <td>February 25, 2020 12:38PM</td>\n",
+       "      <td>Michaell</td>\n",
+       "      <td>\\nand, that's on top of any discount you negot...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>March 25, 2002 12:06AM</td>\n",
-       "      <td>i am debating a new purchase and these two are...</td>\n",
+       "      <td>February 25, 2020 12:41PM</td>\n",
+       "      <td>andres3</td>\n",
+       "      <td>add $350 to any lease on a kia if you are not ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>March 25, 2002 10:02AM</td>\n",
-       "      <td>great handling, rwd, excellent engine and the ...</td>\n",
+       "      <td>February 25, 2020 12:44PM</td>\n",
+       "      <td>andres3</td>\n",
+       "      <td>\\n\\ndid you hear about the key fob scam the de...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>March 25, 2002 4:04PM</td>\n",
-       "      <td>and no manual tranny. that may not matter to y...</td>\n",
+       "      <td>February 25, 2020 12:47PM</td>\n",
+       "      <td>tjc78</td>\n",
+       "      <td>that's a jaw-dropping lease incentive. amazing...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>March 25, 2002 5:44PM</td>\n",
-       "      <td>one beauty of bmw 3 series is that there are s...</td>\n",
+       "      <td>February 25, 2020 12:50PM</td>\n",
+       "      <td>Michaell</td>\n",
+       "      <td>\\ni'm pretty sure that's the case with any cap...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     Date                                           comments\n",
-       "0  March 24, 2002 10:54PM  i personally think that with a few tweaks the ...\n",
-       "1  March 25, 2002 12:06AM  i am debating a new purchase and these two are...\n",
-       "2  March 25, 2002 10:02AM  great handling, rwd, excellent engine and the ...\n",
-       "3   March 25, 2002 4:04PM  and no manual tranny. that may not matter to y...\n",
-       "4   March 25, 2002 5:44PM  one beauty of bmw 3 series is that there are s..."
+       "                        Date   user_id  \\\n",
+       "0  February 25, 2020 12:38PM  Michaell   \n",
+       "1  February 25, 2020 12:41PM   andres3   \n",
+       "2  February 25, 2020 12:44PM   andres3   \n",
+       "3  February 25, 2020 12:47PM     tjc78   \n",
+       "4  February 25, 2020 12:50PM  Michaell   \n",
+       "\n",
+       "                                            comments  \n",
+       "0  \\nand, that's on top of any discount you negot...  \n",
+       "1  add $350 to any lease on a kia if you are not ...  \n",
+       "2  \\n\\ndid you hear about the key fob scam the de...  \n",
+       "3  that's a jaw-dropping lease incentive. amazing...  \n",
+       "4  \\ni'm pretty sure that's the case with any cap...  "
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "source": [
-    "top10 = ['audi','mercedes','mazda','bmw','nissan','volvo','ford','hyundai','volkswagen','toyota']\n",
+    "top10 = ['audi',\n",
+    " 'bmw',\n",
+    " 'acura',\n",
+    " 'honda',\n",
+    " 'volkswagen',\n",
+    " 'cadillac',\n",
+    " 'infiniti',\n",
+    " 'mercedes',\n",
+    " 'hyundai',\n",
+    " 'toyota']\n",
     "freq_count = {}\n",
     "for brands in top10:\n",
     "    freq_count[brands] = 0"
@@ -121,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "source": [
     "freq_count = {}\n",
     "for brand in top10:\n",
@@ -133,50 +155,50 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'audi': 337,\n",
-       " 'mercedes': 162,\n",
-       " 'mazda': 82,\n",
-       " 'bmw': 1229,\n",
-       " 'nissan': 205,\n",
-       " 'volvo': 127,\n",
-       " 'ford': 168,\n",
-       " 'hyundai': 77,\n",
-       " 'volkswagen': 18,\n",
-       " 'toyota': 136}"
+       "{'audi': 703,\n",
+       " 'bmw': 905,\n",
+       " 'acura': 432,\n",
+       " 'honda': 174,\n",
+       " 'volkswagen': 14,\n",
+       " 'cadillac': 218,\n",
+       " 'infiniti': 178,\n",
+       " 'mercedes': 173,\n",
+       " 'hyundai': 81,\n",
+       " 'toyota': 78}"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 13
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "source": [
     "def SimultaneousCount(brand1: str, brand2: str):\n",
     "    return corpus[\"comments\"].apply(lambda x: (all(t in x for t in [brand1, brand2])))\n",
     "\n",
-    "sum(SimultaneousCount(\"bmw\",\"nissan\"))"
+    "sum(SimultaneousCount(\"mercedes\",\"hyundai\"))"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "74"
+       "11"
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 16
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "source": [
     "Lift = pd.DataFrame(index=top10, columns=top10)\n",
     "\n",
@@ -186,9 +208,9 @@
     "\n",
     "        Lift[brand1][brand2] = (N*N_ab)/(freq_count[brand1]*freq_count[brand2])\n",
     "        if(brand1 == brand2):\n",
-    "            Lift[brand1][brand2] = 1\n",
+    "            Lift[brand1][brand2] = np.nan\n",
     "\n",
-    "Lift.to_csv(\"./output/lift.csv\")\n",
+    "# Lift.to_csv(\"./output/lift.csv\")\n",
     "Lift"
    ],
    "outputs": [
@@ -215,180 +237,180 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>audi</th>\n",
-       "      <th>mercedes</th>\n",
-       "      <th>mazda</th>\n",
        "      <th>bmw</th>\n",
-       "      <th>nissan</th>\n",
-       "      <th>volvo</th>\n",
-       "      <th>ford</th>\n",
-       "      <th>hyundai</th>\n",
+       "      <th>acura</th>\n",
+       "      <th>honda</th>\n",
        "      <th>volkswagen</th>\n",
+       "      <th>cadillac</th>\n",
+       "      <th>infiniti</th>\n",
+       "      <th>mercedes</th>\n",
+       "      <th>hyundai</th>\n",
        "      <th>toyota</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>audi</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4.201121</td>\n",
-       "      <td>2.526019</td>\n",
-       "      <td>2.347497</td>\n",
-       "      <td>1.515611</td>\n",
-       "      <td>5.35891</td>\n",
-       "      <td>2.377808</td>\n",
-       "      <td>0.960731</td>\n",
-       "      <td>9.041543</td>\n",
-       "      <td>1.631829</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mercedes</th>\n",
-       "      <td>4.201121</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.501355</td>\n",
-       "      <td>2.153693</td>\n",
-       "      <td>2.252033</td>\n",
-       "      <td>7.270341</td>\n",
-       "      <td>2.931217</td>\n",
-       "      <td>2.79798</td>\n",
-       "      <td>11.969136</td>\n",
-       "      <td>2.263072</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mazda</th>\n",
-       "      <td>2.526019</td>\n",
-       "      <td>1.501355</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.731628</td>\n",
-       "      <td>4.449137</td>\n",
-       "      <td>6.224121</td>\n",
-       "      <td>4.343206</td>\n",
-       "      <td>3.948369</td>\n",
-       "      <td>20.268293</td>\n",
-       "      <td>6.70642</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.433877</td>\n",
+       "      <td>2.623149</td>\n",
+       "      <td>2.360835</td>\n",
+       "      <td>3.035359</td>\n",
+       "      <td>3.541252</td>\n",
+       "      <td>3.421884</td>\n",
+       "      <td>4.626144</td>\n",
+       "      <td>2.09852</td>\n",
+       "      <td>2.270033</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>bmw</th>\n",
-       "      <td>2.347497</td>\n",
-       "      <td>2.153693</td>\n",
-       "      <td>1.731628</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.464462</td>\n",
-       "      <td>1.75695</td>\n",
-       "      <td>1.569656</td>\n",
-       "      <td>1.317194</td>\n",
-       "      <td>2.930024</td>\n",
-       "      <td>1.312545</td>\n",
+       "      <td>2.433877</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.935768</td>\n",
+       "      <td>1.23313</td>\n",
+       "      <td>1.178927</td>\n",
+       "      <td>2.3218</td>\n",
+       "      <td>2.689012</td>\n",
+       "      <td>3.911583</td>\n",
+       "      <td>1.630121</td>\n",
+       "      <td>1.90442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>nissan</th>\n",
-       "      <td>1.515611</td>\n",
-       "      <td>2.252033</td>\n",
-       "      <td>4.449137</td>\n",
-       "      <td>1.464462</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.787786</td>\n",
-       "      <td>2.46115</td>\n",
-       "      <td>2.842825</td>\n",
-       "      <td>5.404878</td>\n",
-       "      <td>8.40538</td>\n",
+       "      <th>acura</th>\n",
+       "      <td>2.623149</td>\n",
+       "      <td>1.935768</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.961446</td>\n",
+       "      <td>1.646495</td>\n",
+       "      <td>3.277884</td>\n",
+       "      <td>5.697982</td>\n",
+       "      <td>3.99727</td>\n",
+       "      <td>2.845793</td>\n",
+       "      <td>2.51196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>volvo</th>\n",
-       "      <td>5.35891</td>\n",
-       "      <td>7.270341</td>\n",
-       "      <td>6.224121</td>\n",
-       "      <td>1.75695</td>\n",
-       "      <td>4.787786</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.206412</td>\n",
-       "      <td>1.529604</td>\n",
-       "      <td>13.086614</td>\n",
-       "      <td>4.33013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ford</th>\n",
-       "      <td>2.377808</td>\n",
-       "      <td>2.931217</td>\n",
-       "      <td>4.343206</td>\n",
-       "      <td>1.569656</td>\n",
-       "      <td>2.46115</td>\n",
-       "      <td>4.206412</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5.010668</td>\n",
-       "      <td>6.595238</td>\n",
-       "      <td>3.273372</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>hyundai</th>\n",
-       "      <td>0.960731</td>\n",
-       "      <td>2.79798</td>\n",
-       "      <td>3.948369</td>\n",
-       "      <td>1.317194</td>\n",
-       "      <td>2.842825</td>\n",
-       "      <td>1.529604</td>\n",
-       "      <td>5.010668</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7.194805</td>\n",
-       "      <td>8.094156</td>\n",
+       "      <th>honda</th>\n",
+       "      <td>2.360835</td>\n",
+       "      <td>1.23313</td>\n",
+       "      <td>5.961446</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.087849</td>\n",
+       "      <td>1.968918</td>\n",
+       "      <td>3.697436</td>\n",
+       "      <td>2.646469</td>\n",
+       "      <td>5.652334</td>\n",
+       "      <td>9.905172</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>volkswagen</th>\n",
-       "      <td>9.041543</td>\n",
-       "      <td>11.969136</td>\n",
-       "      <td>20.268293</td>\n",
-       "      <td>2.930024</td>\n",
-       "      <td>5.404878</td>\n",
-       "      <td>13.086614</td>\n",
-       "      <td>6.595238</td>\n",
-       "      <td>7.194805</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8.147059</td>\n",
+       "      <td>3.035359</td>\n",
+       "      <td>1.178927</td>\n",
+       "      <td>1.646495</td>\n",
+       "      <td>4.087849</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.262779</td>\n",
+       "      <td>1.997994</td>\n",
+       "      <td>4.111478</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cadillac</th>\n",
+       "      <td>3.541252</td>\n",
+       "      <td>2.3218</td>\n",
+       "      <td>3.277884</td>\n",
+       "      <td>1.968918</td>\n",
+       "      <td>3.262779</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.747526</td>\n",
+       "      <td>6.336957</td>\n",
+       "      <td>3.101654</td>\n",
+       "      <td>3.513761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>infiniti</th>\n",
+       "      <td>3.421884</td>\n",
+       "      <td>2.689012</td>\n",
+       "      <td>5.697982</td>\n",
+       "      <td>3.697436</td>\n",
+       "      <td>1.997994</td>\n",
+       "      <td>4.747526</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.629181</td>\n",
+       "      <td>4.834651</td>\n",
+       "      <td>3.944757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mercedes</th>\n",
+       "      <td>4.626144</td>\n",
+       "      <td>3.911583</td>\n",
+       "      <td>3.99727</td>\n",
+       "      <td>2.646469</td>\n",
+       "      <td>4.111478</td>\n",
+       "      <td>6.336957</td>\n",
+       "      <td>6.629181</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.908442</td>\n",
+       "      <td>3.320809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hyundai</th>\n",
+       "      <td>2.09852</td>\n",
+       "      <td>1.630121</td>\n",
+       "      <td>2.845793</td>\n",
+       "      <td>5.652334</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.101654</td>\n",
+       "      <td>4.834651</td>\n",
+       "      <td>3.908442</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.092593</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>toyota</th>\n",
-       "      <td>1.631829</td>\n",
-       "      <td>2.263072</td>\n",
-       "      <td>6.70642</td>\n",
-       "      <td>1.312545</td>\n",
-       "      <td>8.40538</td>\n",
-       "      <td>4.33013</td>\n",
-       "      <td>3.273372</td>\n",
-       "      <td>8.094156</td>\n",
-       "      <td>8.147059</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2.270033</td>\n",
+       "      <td>1.90442</td>\n",
+       "      <td>2.51196</td>\n",
+       "      <td>9.905172</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.513761</td>\n",
+       "      <td>3.944757</td>\n",
+       "      <td>3.320809</td>\n",
+       "      <td>7.092593</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                audi   mercedes      mazda       bmw    nissan      volvo  \\\n",
-       "audi               1   4.201121   2.526019  2.347497  1.515611    5.35891   \n",
-       "mercedes    4.201121          1   1.501355  2.153693  2.252033   7.270341   \n",
-       "mazda       2.526019   1.501355          1  1.731628  4.449137   6.224121   \n",
-       "bmw         2.347497   2.153693   1.731628         1  1.464462    1.75695   \n",
-       "nissan      1.515611   2.252033   4.449137  1.464462         1   4.787786   \n",
-       "volvo        5.35891   7.270341   6.224121   1.75695  4.787786          1   \n",
-       "ford        2.377808   2.931217   4.343206  1.569656   2.46115   4.206412   \n",
-       "hyundai     0.960731    2.79798   3.948369  1.317194  2.842825   1.529604   \n",
-       "volkswagen  9.041543  11.969136  20.268293  2.930024  5.404878  13.086614   \n",
-       "toyota      1.631829   2.263072    6.70642  1.312545   8.40538    4.33013   \n",
+       "                audi       bmw     acura     honda volkswagen  cadillac  \\\n",
+       "audi             NaN  2.433877  2.623149  2.360835   3.035359  3.541252   \n",
+       "bmw         2.433877       NaN  1.935768   1.23313   1.178927    2.3218   \n",
+       "acura       2.623149  1.935768       NaN  5.961446   1.646495  3.277884   \n",
+       "honda       2.360835   1.23313  5.961446       NaN   4.087849  1.968918   \n",
+       "volkswagen  3.035359  1.178927  1.646495  4.087849        NaN  3.262779   \n",
+       "cadillac    3.541252    2.3218  3.277884  1.968918   3.262779       NaN   \n",
+       "infiniti    3.421884  2.689012  5.697982  3.697436   1.997994  4.747526   \n",
+       "mercedes    4.626144  3.911583   3.99727  2.646469   4.111478  6.336957   \n",
+       "hyundai      2.09852  1.630121  2.845793  5.652334        0.0  3.101654   \n",
+       "toyota      2.270033   1.90442   2.51196  9.905172        0.0  3.513761   \n",
        "\n",
-       "                ford   hyundai volkswagen    toyota  \n",
-       "audi        2.377808  0.960731   9.041543  1.631829  \n",
-       "mercedes    2.931217   2.79798  11.969136  2.263072  \n",
-       "mazda       4.343206  3.948369  20.268293   6.70642  \n",
-       "bmw         1.569656  1.317194   2.930024  1.312545  \n",
-       "nissan       2.46115  2.842825   5.404878   8.40538  \n",
-       "volvo       4.206412  1.529604  13.086614   4.33013  \n",
-       "ford               1  5.010668   6.595238  3.273372  \n",
-       "hyundai     5.010668         1   7.194805  8.094156  \n",
-       "volkswagen  6.595238  7.194805          1  8.147059  \n",
-       "toyota      3.273372  8.094156   8.147059         1  "
+       "            infiniti  mercedes   hyundai    toyota  \n",
+       "audi        3.421884  4.626144   2.09852  2.270033  \n",
+       "bmw         2.689012  3.911583  1.630121   1.90442  \n",
+       "acura       5.697982   3.99727  2.845793   2.51196  \n",
+       "honda       3.697436  2.646469  5.652334  9.905172  \n",
+       "volkswagen  1.997994  4.111478       0.0       0.0  \n",
+       "cadillac    4.747526  6.336957  3.101654  3.513761  \n",
+       "infiniti         NaN  6.629181  4.834651  3.944757  \n",
+       "mercedes    6.629181       NaN  3.908442  3.320809  \n",
+       "hyundai     4.834651  3.908442       NaN  7.092593  \n",
+       "toyota      3.944757  3.320809  7.092593       NaN  "
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 19
     }
    ],
    "metadata": {}
